[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/BigAsteroid.gd" type="Script" id=1]
[ext_resource path="res://sprites/Level/AsteroidsAndPlanets/Asteroids.png" type="Texture" id=2]
[ext_resource path="res://sprites/Level/AsteroidsAndPlanets/asteroid_b4.png" type="Texture" id=3]
[ext_resource path="res://sounds/fx/hits/explosion_11.wav" type="AudioStream" id=4]
[ext_resource path="res://physics/asteroid_material.tres" type="PhysicsMaterial" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 42 )

[sub_resource type="CanvasItemMaterial" id=3]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 30.0
initial_velocity_random = 0.7
angular_velocity = 100.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5

[node name="Node2D_BigAsteroid" type="Node2D"]
script = ExtResource( 1 )

[node name="RigidBody2D" type="RigidBody2D" parent="." groups=["asteroid"]]
collision_layer = 2
collision_mask = 5
mass = 10.0
physics_material_override = ExtResource( 5 )
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
shape = SubResource( 1 )

[node name="Asteroid" type="Sprite" parent="RigidBody2D"]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 13, 74, 40, 42 )

[node name="ExplosionParticles" type="Particles2D" parent="."]
material = SubResource( 3 )
emitting = false
amount = 32
lifetime = 2.0
one_shot = true
preprocess = 1.0
explosiveness = 1.0
process_material = SubResource( 2 )
texture = ExtResource( 3 )

[node name="HitAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -2.0

[connection signal="body_entered" from="RigidBody2D" to="." method="_on_RigidBody2D_body_entered"]
